5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_1331.log
== SUBMITION (2019-03-12 15:24:26) 
-- CODE:
print(50%3//16,6)
-- EXECUTION TIME:
0.211496
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:25:09) 
-- CODE:
print(16,6//25)
-- EXECUTION TIME:
0.157854
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:27:34) 
-- CODE:
print(25//50%3 16,6)
-- EXECUTION TIME:
0.14568
-- ERROR:
  File "/home/codebench/codes/1578/1331/main.py", line 1
    print(25//50%3 16,6)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 15:32:54) 
-- CODE:
print(25//(50%3 16,6))
-- EXECUTION TIME:
0.176124
-- ERROR:
  File "/home/codebench/codes/1578/1331/main.py", line 1
    print(25//(50%3 16,6))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:10:18) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.118119
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
